# CAN-UDP-adapter

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_embedded.sh  build_host.sh
apps/can-to-udp/: CMakeLists.txt  build.sh  main.cpp
apps/can_worker/: CMakeLists.txt  build.sh  cancontroller.cpp  cancontroller.h  candevicedriver.cpp  candevicedriver.h  cansocket.cpp  cansocket.h  main.cpp
apps/udp-to-can/: CMakeLists.txt  build.sh  ethernetdevicedriver.cpp  ethernetdevicedriver.h  main.cpp  make_socket.c  udpcontroller.cpp  udpcontroller.h
apps/udp_worker/: CMakeLists.txt  build.sh  ethernetdevicedriver.cpp  ethernetdevicedriver.h  main.cpp  udpcontroller.cpp  udpcontroller.h
cmake/: buildroot.cmake  host.cmake
common/include/: cansocket.h  daemon.h  datagramsocket.h  defines.h  embtime.h  shmstorage.h  typedefs.h
common/src/: cansocket.cpp  datagramsocket.cpp  embtime.cpp
libs/elogger/: CMakeLists.txt  consoleloghandler.cpp  consoleloghandler.h  elogger.cpp  elogger.h  fileloghandler.cpp  fileloghandler.h  iloghandler.h  sysloghandler.cpp  sysloghandler.h
libs/elogger/build-gcc/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/libini/: CMakeLists.txt  inireader.cpp  inireader.h
libs/libini/build-gcc/: CMakeCache.txt  Makefile  cmake_install.cmake
overlay/usr/sbin/: udp_worker
